Added an automatic Matrix key generator.

--- a/Base/Dockerfile
+++ b/Base/Dockerfile
@@ -1,9 +1,7 @@
 FROM fernandoenzo/debian:10s-min
 MAINTAINER Fernando Enzo Guarini (fernandoenzo@gmail.com)
 
-COPY scripts/basics /tmp
+COPY scripts/ /tmp
 RUN bash /tmp/basics
-
-COPY scripts/boot /usr/local/boot
 
 EXPOSE 8008/tcp
